Make it Right for a better Ride

--- a/docs/index.css
+++ b/docs/index.css
@@ -28,3 +28,39 @@ ul li a {
 .center{
   text-align: center;
 }
+
+.title1 {
+  display: inline;
+  line-break: strict;
+  color: darkblue;
+  background-color: aliceblue;
+}
+
+.title2 {
+  display: inline;
+  line-break: strict;
+  color: darkblue;
+  background-color: aqua;
+}
+
+.title3 {
+  display: inline;
+  line-break: strict;
+  color: darkblue;
+  background-color: yellow;
+}
+
+.itemList {
+  display: flex;
+  flex-direction: column;
+} 
+
+.bPostItem {
+  text-align: center;
+  display: inline-block;
+}
+
+.link {
+  text-decoration: none;
+  list-style: none;
+}  
