Make it Right for a better Ride

--- a/docs/index.css
+++ b/docs/index.css
@@ -12,17 +12,28 @@ body h1 {
   text-align: center;
 }
 
+ul {
+  display: block; 
+  text-justify: auto;
+}
+
 a {
   text-decoration: none;
+  list-style: none;
   color: cyan; 
+  text-decoration-style: none;
+  text-decoration-line: none;
 }
 
 li {
   display: inline;
+  line-break: strict;
 }
 
-ul li a {
-  text-decoration-style: none;
+.main {
+  text-align: center;
+  display: inline-block;
+  break-inside: auto;
 }
 
 .center{
@@ -64,3 +75,5 @@ ul li a {
   text-decoration: none;
   list-style: none;
 }  
+
+
