Make it Right for a better Ride

--- a/docs/index.css
+++ b/docs/index.css
@@ -10,11 +10,13 @@ body {
 
 body h1 {
   text-align: center;
+  font-size: larger;
 }
 
 ul {
   display: block; 
   text-justify: auto;
+  padding-left: 1em;
 }
 
 a {
@@ -23,11 +25,16 @@ a {
   color: cyan; 
   text-decoration-style: none;
   text-decoration-line: none;
+  background-color: darkblue;
 }
 
 li {
   display: inline;
   line-break: strict;
+}
+
+p {
+  font-size: large;
 }
 
 .main {
@@ -45,6 +52,7 @@ li {
   line-break: strict;
   color: darkblue;
   background-color: aliceblue;
+  font-size: larger;
 }
 
 .title2 {
@@ -52,6 +60,7 @@ li {
   line-break: strict;
   color: darkblue;
   background-color: aqua;
+  font-size: larger;
 }
 
 .title3 {
@@ -59,6 +68,7 @@ li {
   line-break: strict;
   color: darkblue;
   background-color: yellow;
+  font-size: larger;
 }
 
 .itemList {
