Make it Right for a better Ride

--- a/docs/index.css
+++ b/docs/index.css
@@ -26,15 +26,17 @@ a {
   text-decoration-style: none;
   text-decoration-line: none;
   background-color: darkblue;
+  font-size: 33px;
 }
 
 li {
   display: inline;
   line-break: strict;
+  font-size: 28px;
 }
 
 p {
-  font-size: large;
+  font-size: 32px;
 }
 
 .main {
