Make it Right for a better Ride

--- a/docs/index.css
+++ b/docs/index.css
@@ -8,9 +8,9 @@ body {
   background-color: black;
 }
 
-body h1 {
+h1 {
   text-align: center;
-  font-size: larger;
+  font-size: 42;
 }
 
 ul {
@@ -37,6 +37,7 @@ li {
 
 p {
   font-size: 32px;
+  text-align: justify;
 }
 
 .main {
