Make it Right for a better Ride

--- a/docs/index.css
+++ b/docs/index.css
@@ -74,6 +74,14 @@ p {
   font-size: larger;
 }
 
+.title4 {
+  display: inline;
+  line-break: strict;
+  color: white;
+  background-color: black;
+  font-size: larger;
+}
+
 .itemList {
   display: flex;
   flex-direction: column;
