Make it Right for a better Ride

--- a/docs/index.css
+++ b/docs/index.css
@@ -97,4 +97,19 @@ p {
   list-style: none;
 }  
 
+.textbox {
+  text-align: justify;
+}
 
+footer{
+  text-align: center;
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  margin-bottom: 0px;
+  text-decoration: none;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+}
