Make it Right for a better Ride

--- a/docs/index.css
+++ b/docs/index.css
@@ -6,6 +6,15 @@ html {
 body {
   color: white; 
   background-color: black;
+  text-align: center;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  margin-bottom: 0px;
+  text-decoration: none;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
@@ -103,7 +112,6 @@ p {
 
 footer{
   text-align: center;
-  position: fixed;
   bottom: 0px;
   left: 0px;
   right: 0px;
