Make it Right for a better Ride

--- a/docs/index.css
+++ b/docs/index.css
@@ -17,36 +17,42 @@ body {
   flex-direction: column;
 }
 
-h1 {
+body h1 {
   text-align: center;
-  font-size: 42;
+  font-size: 32;
 }
 
-ul {
+body ul {
   display: block; 
   text-justify: auto;
   padding-left: 1em;
 }
 
-a {
+body a {
   text-decoration: none;
   list-style: none;
   color: cyan; 
   text-decoration-style: none;
   text-decoration-line: none;
   background-color: darkblue;
-  font-size: 33px;
+  font-size: 23px;
 }
 
-li {
+body li {
   display: inline;
   line-break: strict;
-  font-size: 28px;
+  font-size: 22px;
 }
 
-p {
-  font-size: 32px;
+body p {
+  font-size: 20px;
   text-align: justify;
+}
+
+body code {
+  text-align: center;
+  background-color: gray;
+  color: white;
 }
 
 .main {
@@ -64,7 +70,7 @@ p {
   line-break: strict;
   color: darkblue;
   background-color: aliceblue;
-  font-size: larger;
+  font-size: 33px;
 }
 
 .title2 {
@@ -72,7 +78,7 @@ p {
   line-break: strict;
   color: darkblue;
   background-color: aqua;
-  font-size: larger;
+  font-size: 33px;
 }
 
 .title3 {
@@ -80,7 +86,7 @@ p {
   line-break: strict;
   color: darkblue;
   background-color: yellow;
-  font-size: larger;
+  font-size: 33px;
 }
 
 .title4 {
@@ -88,7 +94,7 @@ p {
   line-break: strict;
   color: white;
   background-color: black;
-  font-size: larger;
+  font-size: 33px;
 }
 
 .itemList {
@@ -117,7 +123,20 @@ footer{
   right: 0px;
   margin-bottom: 0px;
   text-decoration: none;
-  background-color: black;
   display: flex;
   flex-direction: column;
+}
+
+footer p{
+  font-size: 16px;
+}
+
+footer a{
+  font-size: 16px;
+}
+
+.sourceCode {
+  text-align: center;
+  display: block;
+  line-break: auto;
 }
