Make it Right for a better Ride

--- a/docs/index.css
+++ b/docs/index.css
@@ -55,6 +55,10 @@ body code {
   color: white;
 }
 
+body br {
+  margin-top: 1rem;
+}
+
 .main {
   text-align: center;
   display: inline-block;
@@ -143,3 +147,4 @@ footer a{
 .logic {
   padding:1em;
 }
+
