Make it Right for a better Ride

--- a/docs/index.css
+++ b/docs/index.css
@@ -50,9 +50,8 @@ body p {
 }
 
 body code {
-  text-align: center;
-  background-color: gray;
-  color: white;
+  text-align: left;
+  color: gray
 }
 
 .main {
@@ -136,7 +135,7 @@ footer a{
 }
 
 .sourceCode {
-  text-align: center;
+  text-align: left;
   display: block;
   line-break: auto;
 }
