Make it Right for a better Ride

--- a/docs/index.css
+++ b/docs/index.css
@@ -50,7 +50,7 @@ body p {
 }
 
 body code {
-  text-align: left;
+/*   text-align: left; */
   color: gray
 }
 
@@ -140,7 +140,16 @@ footer a{
   line-break: auto;
 }
 .logic {
-  margin-top: 3rem;
-  margin-bottom: 3rem;
+  display: block;
+}
+
+.logicThought{
+  background-color: white;
+  color:black;
+  text-align: justify;
+}
+
+.logicThought p{
+  color: black;
 }
 
