Make it Right for a better Ride

--- a/docs/index.css
+++ b/docs/index.css
@@ -70,6 +70,13 @@ body code {
   color: darkblue;
   background-color: aliceblue;
   font-size: 33px;
+  display: block;
+}
+
+.title1 li {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  display: block;
 }
 
 .title2 {
@@ -87,6 +94,8 @@ body code {
   background-color: yellow;
   font-size: 33px;
 }
+
+    
 
 .title4 {
   display: inline;
