--- a/docs/index.css
+++ b/docs/index.css
@@ -1,17 +1,17 @@
 html {
   padding: 0%;
-  margin: 2%; 
+  margin: 2%;
+  text-align: center;
 }
 
 body {
-  color: white; 
-  background-color: black;
   text-align: center;
   bottom: 0px;
   left: 0px;
   right: 0px;
   margin-bottom: 0px;
   text-decoration: none;
+  color: white; 
   background-color: black;
   display: flex;
   flex-direction: column;
@@ -56,7 +56,7 @@ body code {
 
 .main {
   text-align: center;
-  display: inline-block;
+  display: block;
   break-inside: auto;
 }
 
@@ -135,6 +135,7 @@ footer{
   text-decoration: none;
   display: flex;
   flex-direction: column;
+  margin-top: 2rem;
 }
 
 footer p{
