Make it Right for a better Ride

--- a/docs/index.css
+++ b/docs/index.css
@@ -35,7 +35,7 @@ body a {
   text-decoration-style: none;
   text-decoration-line: none;
   background-color: darkblue;
-  font-size: 23px;
+  font-size: 43px;
 }
 
 body li {
@@ -50,8 +50,9 @@ body p {
 }
 
 body code {
-  background-color: darkred;
-  color: white;
+  background-color: lawngreen;
+  color: darkblue;
+  font-size:32px;
 }
 
 .main {
@@ -69,7 +70,7 @@ body code {
   line-break: strict;
   color: darkblue;
   background-color: aliceblue;
-  font-size: 33px;
+  font-size: 45px;
   display: block;
 }
 
@@ -84,7 +85,7 @@ body code {
   line-break: strict;
   color: darkblue;
   background-color: aqua;
-  font-size: 33px;
+  font-size: 45px;
 }
 
 .title3 {
@@ -92,7 +93,7 @@ body code {
   line-break: strict;
   color: darkblue;
   background-color: yellow;
-  font-size: 33px;
+  font-size: 45px;
 }
 
     
@@ -102,7 +103,7 @@ body code {
   line-break: strict;
   color: white;
   background-color: black;
-  font-size: 33px;
+  font-size: 45px;
 }
 
 .itemList {
