Make it Right for a better Ride

--- a/docs/index.css
+++ b/docs/index.css
@@ -50,9 +50,9 @@ body p {
 }
 
 body code {
-  background-color: lawngreen;
-  color: darkblue;
-  font-size:30px;
+  background-color: gray;
+  color: white;
+  font-size:25px;
 }
 
 .main {
@@ -158,3 +158,6 @@ footer{
   color: black;
 }
 
+.note {
+  font-size:22px;
+}
