Make it Right for a better Ride

--- a/docs/index.css
+++ b/docs/index.css
@@ -1,31 +1,24 @@
 html {
-  padding: 0%;
-  margin: 2%;
-  text-align: center;
+  padding: 0;
+  margin: 0;
+  background-color: black;
+  color: white;
 }
 
 body {
+  padding:2rem;
+  display: relative;
   text-align: center;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
-  margin-bottom: 0px;
-  text-decoration: none;
-  color: white; 
-  background-color: black;
-  display: flex;
-  flex-direction: column;
 }
 
 body h1 {
   text-align: center;
-  font-size: 32px;
+  font-size: 28px;
 }
 
 body ul {
-  display: block; 
+  display: inline; 
   text-justify: auto;
-  padding-left: 1em;
 }
 
 body a {
@@ -39,9 +32,12 @@ body a {
 }
 
 body li {
-  display: inline;
-  line-break: strict;
   font-size: 30px;
+  color:white;
+}
+
+li {
+  display: block;
 }
 
 body p {
@@ -56,9 +52,15 @@ body code {
 }
 
 .main {
+  background-image: url(./images/PowerFinger.jpeg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center center;
+  min-width: 95%;
+  min-height: 95%;
+  position: absolute;
   text-align: center;
-  display: block;
-  break-inside: auto;
 }
 
 .center{
@@ -71,7 +73,6 @@ body code {
   color: darkblue;
   background-color: aliceblue;
   font-size: 42px;
-  display: block;
 }
 
 .title1 li {
