--- a/docs/index.css
+++ b/docs/index.css
@@ -31,18 +31,8 @@ body a {
   font-size: 30px;
 }
 
-body li {
-  font-size: 30px;
-  color:white;
-}
-
-li {
-  display: block;
-}
-
 body p {
   font-size: 30px;
-  text-align: justify;
 }
 
 body code {
@@ -95,9 +85,7 @@ body code {
   color: darkblue;
   background-color: yellow;
   font-size: 38px;
-}
-
-    
+}    
 
 .title4 {
   display: inline;
@@ -116,7 +104,7 @@ body code {
 .bPostItem {
   text-align: center;
   display: inline-block;
-  padding-top: 2rem;
+  background-color: black;
 }
 
 .link {
