Make it Right for a better Ride

--- a/docs/index.css
+++ b/docs/index.css
@@ -6,9 +6,9 @@ html {
 }
 
 body {
-  padding:2rem;
-  display: relative;
   text-align: center;
+  margin-left:3rem;
+  margin-right:3rem;
 }
 
 body h1 {
@@ -16,14 +16,8 @@ body h1 {
   font-size: 28px;
 }
 
-body ul {
-  display: inline; 
-  text-justify: auto;
-}
-
-body a {
+a {
   text-decoration: none;
-  list-style: none;
   color: cyan; 
   text-decoration-style: none;
   text-decoration-line: none;
@@ -31,18 +25,19 @@ body a {
   font-size: 30px;
 }
 
-body p {
+p {
   font-size: 30px;
+  line-break: auto;
 }
 
-body code {
+code {
   background-color: gray;
   color: black;
   font-size:25px;
 }
 
 .main {
-  background-image: url(./images/PowerFinger.jpeg);
+  background-image: url(./images/PowerFinger.webp);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -64,12 +59,6 @@ body code {
   color: darkblue;
   background-color: aliceblue;
   font-size: 42px;
-}
-
-.title1 li {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-  display: block;
 }
 
 .title2 {
