Make it Right for a better Ride

--- a/docs/index.css
+++ b/docs/index.css
@@ -7,8 +7,12 @@ html {
 
 body {
   text-align: center;
-  margin-left:3rem;
-  margin-right:3rem;
+}
+
+body p {
+  font-size:32px;
+  margin-left:2rem;
+  margin-right:2rem;
 }
 
 body h1 {
@@ -25,10 +29,6 @@ a {
   font-size: 30px;
 }
 
-p {
-  font-size: 30px;
-  line-break: auto;
-}
 
 code {
   background-color: gray;
@@ -42,15 +42,23 @@ code {
   background-size: cover;
   background-attachment: fixed;
   background-position: center center;
-  min-width: 95%;
-  min-height: 95%;
+  min-width: 99%;
+  min-height: 100%;
   position: absolute;
   text-align: center;
 }
 
 .center{
   text-align: center;
-  margin-top:2rem;
+}
+
+.center p {
+  font-size: 30px;
+  display:flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+
 }
 
 .title1 {
