Make it Right for a better Ride

--- a/docs/index.css
+++ b/docs/index.css
@@ -10,14 +10,24 @@ body {
 }
 
 body p {
-  font-size:32px;
+  font-size:38px;
   margin-left:2rem;
   margin-right:2rem;
 }
 
+body a {
+  text-decoration: none;
+  color: cyan; 
+  text-decoration-style: none;
+  text-decoration-line: none;
+  background-color: darkblue;
+  font-size: 30px;
+}
+
+
 body h1 {
   text-align: center;
-  font-size: 28px;
+  font-size: 38px;
 }
 
 a {
@@ -138,7 +148,10 @@ footer{
 .logicThought{
   background-color: white;
   color:black;
+  font-size: 34px;
   text-align: justify;
+  margin-left:2rem;
+  margin-right:2rem;
 }
 
 .logicThought p{
@@ -146,5 +159,5 @@ footer{
 }
 
 .note {
-  font-size:22px;
+  font-size:24px;
 }
