Make it Right for a better Ride

--- a/docs/index.css
+++ b/docs/index.css
@@ -6,7 +6,7 @@ html {
 }
 
 .container {
-  background-image: url(./images/PowerFinger.webp);
+  background-image: url(images/PowerFinger.webp);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -19,8 +19,6 @@ html {
 
 body p {
   font-size:28px;
-  margin-left:2rem;
-  margin-right:2rem;
 }
 
 body a {
@@ -82,13 +80,8 @@ a {
 
 .bPostItem {
   text-align: center;
-  display: inline-block;
+  display: inline-flexbox;
   background-color: black;
-}
-
-
-.textbox {
-  text-align: justify;
 }
 
 footer{
@@ -98,8 +91,7 @@ footer{
   right: 0px;
   margin-bottom: 0px;
   text-decoration: none;
-  display: flex;
+  display: inline-flexbox;
   flex-direction: column;
-  margin-top: 2rem;
 }
 
