Make it Right for a better Ride

--- a/docs/index.css
+++ b/docs/index.css
@@ -1,8 +1,11 @@
 html {
   padding: 0;
   margin: 0;
+}
+
+body {
   background-color: black;
-  color: white;
+  display: block;
 }
 
 .container {
@@ -14,19 +17,21 @@ html {
   min-width: 99%;
   min-height: 100%;
   position: absolute;
+}
+
+header {
   text-align: center;
 }
 
 body p {
   font-size:28px;
+  color:white;
 }
 
 body a {
-  text-decoration: none;
   color: cyan; 
-  text-decoration-style: none;
-  text-decoration-line: none;
   background-color: darkblue;
+  font-size: 28px;
 }
 
 body h1 {
@@ -34,16 +39,14 @@ body h1 {
   font-size: 38px;
 }
 
-a {
-  color: cyan; 
-  background-color: darkblue;
-  font-size: 28px;
-}
-
 .link {
   text-decoration: none;
   list-style: none;
-}  
+}
+
+.topic {
+  text-align: center;
+}
 
 .title1 {
   display: inline;
