Make it Right for a better Ride

--- a/docs/index.css
+++ b/docs/index.css
@@ -26,6 +26,10 @@ header {
 body p {
   font-size:28px;
   color:white;
+  display: inline-flexbox;
+  line-break: strict;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 body a {
