Make it Right for a better Ride

--- a/docs/index.css
+++ b/docs/index.css
@@ -23,11 +23,14 @@ header {
   text-align: center;
 }
 
+.posts p {
+  display: relative;
+}
+
 body p {
   font-size:28px;
   color:white;
   display: inline-flexbox;
-  line-break: strict;
   flex-direction: row;
   flex-wrap: wrap;
 }
@@ -38,7 +41,6 @@ body a {
   font-size: 28px;
   text-decoration: none;
   list-style: none;
-
 }
 
 body h1 {
@@ -85,7 +87,6 @@ body h1 {
 
 .bPostItem {
   text-align: center;
-  display: inline-flexbox;
   background-color: black;
 }
 
