--- a/docs/article.css
+++ b/docs/article.css
@@ -16,15 +16,35 @@ header{
 }
 
 .title1 {
-  text-align: center;
+  display: inline;
+  line-break: strict;
+  color: darkblue;
+  background-color: aliceblue;
+  font-size: 42px;
 }
+
 .title2 {
-  text-align: center;
+  display: inline;
+  line-break: strict;
+  color: darkblue;
+  background-color: aqua;
+  font-size: 40px;
 }
 
 .title3 {
-  text-align: center;
-  font-size: 48px;
+  display: inline;
+  line-break: strict;
+  color: darkblue;
+  background-color: yellow;
+  font-size: 38px;
+}    
+
+.title4 {
+  display: inline;
+  line-break: strict;
+  color: white;
+  background-color: black;
+  font-size: 38px;
 }
 
 .title4 {
@@ -82,14 +102,13 @@ code {
 
 .logicThought{
   background-color: white;
+  color:black;
   font-size: 28px;
   text-align: justify;
-  margin-left:2rem;
-  margin-right:2rem;
 }
 
-.logicThought p{
-  color: black;
+.logicThought a {
+  text-decoration: none;
 }
 
 .note {
