Make it Right for a better Ride

--- a/docs/index.css
+++ b/docs/index.css
@@ -97,7 +97,9 @@ footer{
   right: 0px;
   margin-bottom: 0px;
   text-decoration: none;
-  display: inline-flexbox;
+  background-color: black;
+  color:white;
+  display: flex;
   flex-direction: column;
 }
 
