--- a/docs/article.css
+++ b/docs/article.css
@@ -116,7 +116,9 @@ code {
 }
 
 footer{
+  background-color: darkblue;
   text-align: center;
+  position: fixed;
   bottom: 0px;
   left: 0px;
   right: 0px;
@@ -124,8 +126,6 @@ footer{
   text-decoration: none;
   display: flex;
   flex-direction: column;
-  margin-top: 2rem;
-  background-color: darkblue;
 }
 
 footer a {
