--- a/docs/article.css
+++ b/docs/article.css
@@ -54,6 +54,7 @@ header{
 
 body p {
   font-size: 28px; 
+  background-color: black;
 }
 
 code {
@@ -114,6 +115,17 @@ code {
 
 .note {
   font-size:24px;
+}
+
+.chicken {
+  background-image: url(./images/Chicken.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center center;
+  min-width: 99%;
+  min-height: 100%;
+  position: absolute;
 }
 
 footer{
