Make it Right for a better Ride

--- a/docs/article.css
+++ b/docs/article.css
@@ -127,6 +127,17 @@ code {
   position: absolute;
 }
 
+.dragon {
+  background-image: url(./images/offensive.jpeg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center center;
+  min-width: 98%;
+  min-height: 100%;
+  position: absolute;
+}
+
 footer{
   background-color: darkblue;
   text-align: center;
