--- a/docs/article.css
+++ b/docs/article.css
@@ -160,3 +160,14 @@ footer a {
   color:white;
   text-decoration: none;
 }
+
+table {
+  text-align: center;
+}
+
+th, td {
+  padding-top: 10px;
+  padding-bottom: 20px;
+  padding-left: 30px;
+  padding-right: 40px;
+}
