--- a/docs/article.css
+++ b/docs/article.css
@@ -127,6 +127,17 @@ code {
   position: absolute;
 }
 
+.Memories{
+  background-image: url(./images/three.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center center;
+  min-width: 98%;
+  min-height: 100%;
+  position: absolute;
+}
+
 .dragon {
   background-image: url(./images/offensive.jpeg);
   background-repeat: no-repeat;
