Make it Right for a better Ride

--- a/docs/article.css
+++ b/docs/article.css
@@ -151,6 +151,10 @@ code {
 
 .md p {
   color:black;
+  background-color: cyan;
+  display: inline-block;
+  opacity: 0.5;
+  margin:2rem;
 }
 
 footer{
