Make it Right for a better Ride

--- a/docs/article.css
+++ b/docs/article.css
@@ -149,12 +149,12 @@ code {
   position: absolute;
 }
 
-.md p {
-  color:black;
-  background-color: cyan;
-  display: inline-block;
+.md {
+  background-color: aliceblue;
   opacity: 0.5;
-  margin:2rem;
+  display: block;
+  margin-right: 2rem;
+  color: black;
 }
 
 footer{
