Make it Right for a better Ride

--- a/docs/article.css
+++ b/docs/article.css
@@ -138,6 +138,17 @@ code {
   position: absolute;
 }
 
+.dragonFire {
+  background-image: url(./images/dragonFire.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center center;
+  min-width: 98%;
+  min-height: 100%;
+  position: absolute;
+}
+
 .dragon {
   background-image: url(./images/offensive.jpeg);
   background-repeat: no-repeat;
@@ -151,10 +162,17 @@ code {
 
 .md {
   background-color: aliceblue;
-  opacity: 0.5;
+  opacity: 0.7;
   display: block;
   margin-right: 2rem;
   color: black;
+}
+
+.black {
+  background-color: black;
+  display: block;
+  opacity: 0.7;
+  margin:5rem;
 }
 
 footer{
