--- a/docs/article.css
+++ b/docs/article.css
@@ -149,6 +149,17 @@ code {
   position: absolute;
 }
 
+.monkey {
+  background-image: url(./images/emc2.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center center;
+  min-width: 98%;
+  min-height: 100%;
+  position: absolute;
+}
+
 .dragon {
   background-image: url(./images/offensive.jpeg);
   background-repeat: no-repeat;
