--- a/docs/article.css
+++ b/docs/article.css
@@ -144,13 +144,13 @@ code {
   background-size: cover;
   background-attachment: fixed;
   background-position: center center;
-  min-width: 98%;
-  min-height: 100%;
+  min-width: 90%;
+  min-height: 90%;
   position: absolute;
 }
 
 .monkey {
-  background-image: url(./images/emc2.png);
+  background-image: url(./images/peace.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -173,7 +173,7 @@ code {
 
 .md {
   background-color: aliceblue;
-  opacity: 0.7;
+  opacity: 0.9;
   display: block;
   margin-right: 2rem;
   color: black;
