Make it Right for a better Ride

--- a/docs/article.css
+++ b/docs/article.css
@@ -149,6 +149,17 @@ code {
   position: absolute;
 }
 
+.king{
+  background-image: url(./images/prince.webp);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center center;
+  min-width: 98%;
+  min-height: 100%;
+  position: absolute;
+}
+
 .monkey {
   background-image: url(./images/peace.jpg);
   background-repeat: no-repeat;
