--- a/docs/article.css
+++ b/docs/article.css
@@ -18,6 +18,7 @@ header{
 .title1 {
   display: inline;
   line-break: strict;
+  opacity: 0.7;
   color: darkblue;
   background-color: aliceblue;
   font-size: 42px;
@@ -27,6 +28,7 @@ header{
   display: inline;
   line-break: strict;
   color: darkblue;
+  opacity: 0.7;
   background-color: aqua;
   font-size: 40px;
 }
@@ -34,6 +36,7 @@ header{
 .title3 {
   display: inline;
   line-break: strict;
+  opacity: 0.7;
   color: darkblue;
   background-color: yellow;
   font-size: 38px;
@@ -64,6 +67,7 @@ code {
 
 .title1 {
   text-align: center;
+  opacity: 0.7;
   color: darkblue;
   background-color: aliceblue;
   font-size: 42px;
@@ -195,6 +199,11 @@ code {
   display: block;
   opacity: 0.7;
   margin:5rem;
+  padding:0.3%;
+  padding-left: 0.2%;
+  padding-right: 0.2%;
+  border-radius: 1rem;
+  border-color: blue;
 }
 
 footer{
