Make it Right for a better Ride

--- a/docs/index.css
+++ b/docs/index.css
@@ -55,6 +55,7 @@ body h1 {
 .title1 {
   display: inline;
   line-break: strict;
+  opacity: 0.8;
   color: darkblue;
   background-color: aliceblue;
   font-size: 42px;
@@ -62,6 +63,7 @@ body h1 {
 
 .title2 {
   display: inline;
+  opacity: 0.8;
   line-break: strict;
   color: darkblue;
   background-color: aqua;
@@ -71,6 +73,7 @@ body h1 {
 .title3 {
   display: inline;
   line-break: strict;
+  opacity: 0.8;
   color: darkblue;
   background-color: yellow;
   font-size: 38px;
@@ -79,6 +82,7 @@ body h1 {
 .title4 {
   display: inline;
   line-break: strict;
+  opacity: 0.8;
   color: white;
   background-color: black;
   font-size: 38px;
@@ -90,6 +94,13 @@ body h1 {
 
 .bPostItem {
   text-align: center;
+}
+
+.black {
+  background-color: black;
+  opacity: 0.8;
+  border-radius: 3rem;
+  margin:0.5%;
 }
 
 footer{
