Make it Right for a better Ride

--- a/docs/index.css
+++ b/docs/index.css
@@ -4,7 +4,6 @@ html {
 }
 
 body {
-  background-color: black;
   display: block;
 }
 
@@ -94,9 +93,10 @@ body h1 {
 
 .black {
   background-color: black;
-  opacity: 0.8;
+  opacity: 0.7;
   border-radius: 3rem;
-  margin:0.5%;
+  margin:0.5rem;
+  display: absolute;
 }
 
 footer{
