Make it Right for a better Ride

--- a/docs/article.css
+++ b/docs/article.css
@@ -90,7 +90,7 @@ code {
 
 .textbox a{
   font-size: 28px;
-  color:white;
+  color:cyan;
   text-decoration: none;
 }
 
@@ -112,6 +112,7 @@ code {
 
 .logicThought a {
   text-decoration: none;
+  color:blue;
 }
 
 .note {
