Make it Right for a better Ride

--- a/docs/article.css
+++ b/docs/article.css
@@ -119,6 +119,17 @@ code {
   font-size:24px;
 }
 
+.woodfire{
+  background-image: url(./images/wood_fire.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center center;
+  min-width: 98%;
+  min-height: 100%;
+  position: absolute;
+}
+
 .chicken {
   background-image: url(./images/Chicken.jpg);
   background-repeat: no-repeat;
