--- a/docs/index.css
+++ b/docs/index.css
@@ -8,7 +8,7 @@ body {
 }
 
 .container {
-  background-image: url(images/PowerFinger.webp);
+  background-image: url(images/three.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
